dashboard fix flex wrap

--- a/src/app/site/dashboard/dashboard/dashboard.component.scss
+++ b/src/app/site/dashboard/dashboard/dashboard.component.scss
@@ -10,3 +10,7 @@
   transition: max-width .4s;
   max-width: 18vw;
 }
+
+#main-row{
+  flex-wrap: nowrap;
+}
